Elastic: Fix small regressions in dark mode

--- a/skins/elastic/styles/dark.less
+++ b/skins/elastic/styles/dark.less
@@ -527,6 +527,7 @@ html.dark-mode {
             border-color: @color-dark-input-border-focus;
         }
 
+        a.button.icon,
         input {
             color: @color-dark-input;
         }
@@ -957,6 +958,8 @@ html.dark-mode {
             font-weight: normal;
         }
 
+        .ui-datepicker-prev,
+        .ui-datepicker-next,
         .ui-state-default,
         &.ui-widget-content .ui-state-default {
             color: @color-dark-font;
